--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,10 +27,10 @@
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
         "tsup": "^5.11.13",
-        "typescript": "^4.7.4",
-        "figlet": "^1.5.2"
+        "typescript": "^4.7.4"
     },
     "dependencies": {
+        "figlet": "^1.5.2",
         "chalk": "^4.1.2",
         "commander": "9.4.1",
         "conf": "^10.2.0",
