--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,8 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "cardinal": "^2.1.1",
+        "boxen": "^5.1.2",
         "prettier": "^2.7.1",
         "inquirer-autocomplete-prompt": "^2.0.0",
         "dedent": "^0.7.0",
