--- a/examples/template-headless/package.json
+++ b/examples/template-headless/package.json
@@ -5,11 +5,11 @@
     "dependencies": {
         "@pankod/refine-cli": "^1.2.0",
         "@pankod/refine-core": "^3.18.0",
-        "@testing-library/jest-dom": "^5.12.0",
-        "@testing-library/react": "^11.2.6",
-        "@testing-library/user-event": "^12.8.3",
-        "@types/jest": "^26.0.23",
-        "react": "^18.2.0",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^14.1.1",
+        "@types/jest": "^29.2.4",
+        "react": "^18.0.0",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.0",
         "web-vitals": "^1.1.1",
@@ -19,14 +19,15 @@
         "@pankod/refine-react-table": "^4.9.0"
     },
     "devDependencies": {
-        "@types/react": "^18.0.15",
-        "@types/react-dom": "^18.0.6",
-        "@types/node": "^12.20.10",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@types/node": "^12.20.11",
         "typescript": "^4.7.4"
     },
     "scripts": {
         "dev": "refine start",
-        "build": "refine build",
+        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "refine": "refine"
