--- a/examples/tutorial-mui/package.json
+++ b/examples/tutorial-mui/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "tutorial-mui",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@pankod/refine-cli": "^1.2.0",
-    "@pankod/refine-core": "^3.18.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1",
-    "@pankod/refine-simple-rest": "^3.18.0",
-    "@pankod/refine-mui": "^3.30.0",
-    "@pankod/refine-react-hook-form": "^3.27.1",
-    "@mui/icons-material": "^5.8.3",
-    "@pankod/refine-react-router-v6": "^3.18.0",
-    "@pankod/refine-inferencer": "^2.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/node": "^12.20.10",
-    "typescript": "^4.7.4"
-  },
-  "scripts": {
-    "dev": "refine start",
-    "build": "refine build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "refine": "refine"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "tutorial-mui",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@pankod/refine-cli": "^1.2.0",
+        "@pankod/refine-core": "^3.18.0",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^14.1.1",
+        "@types/jest": "^29.2.4",
+        "react": "^18.0.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.0",
+        "web-vitals": "^1.1.1",
+        "@pankod/refine-simple-rest": "^3.18.0",
+        "@pankod/refine-mui": "^3.30.0",
+        "@pankod/refine-react-hook-form": "^3.27.1",
+        "@mui/icons-material": "^5.8.3",
+        "@pankod/refine-react-router-v6": "^3.18.0",
+        "@pankod/refine-inferencer": "^2.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@types/node": "^12.20.11",
+        "typescript": "^4.7.4"
+    },
+    "scripts": {
+        "dev": "refine start",
+        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "refine": "refine"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
