--- a/examples/pixels-admin/tsconfig.json
+++ b/examples/pixels-admin/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "downlevelIteration": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "strict": true,
     "skipLibCheck": true,
@@ -20,9 +15,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "*": ["./*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
