--- a/examples/core-use-menu/package.json
+++ b/examples/core-use-menu/package.json
@@ -17,7 +17,7 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "start": "PORT=3005 cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
         "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "eject": "react-scripts eject",
         "refine": "refine"
